{{$NEXT}}

0.02      2021-04-18 10:22:06 CEST

          - Update the main docs to explain create_protected_code()
          - Tests are no longer as sensitive to version number changes

0.01      2021-04-18 10:01:29 CEST

          -  Allows devs to create rewritable auto-generated documents in Perl
             and HTML. Other formats will be supported later.